@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyenchant
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pyenchant/ChangeLog,v 1.14 2009/11/11 01:24:24 tcunha Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pyenchant/ChangeLog,v 1.15 2010/01/13 17:37:13 jer Exp $
+
+  13 Jan 2010; Jeroen Roovers <jer@gentoo.org> pyenchant-1.5.3.ebuild:
+  Marked ~hppa (bug #300741).
 
   11 Nov 2009; Tiago Cunha <tcunha@gentoo.org> pyenchant-1.5.3.ebuild:
   stable sparc, bug 291519
