@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/chardet
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/chardet/ChangeLog,v 1.12 2010/01/12 17:12:36 arfrever Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/chardet/ChangeLog,v 1.13 2010/01/13 17:35:44 jer Exp $
+
+  13 Jan 2010; Jeroen Roovers <jer@gentoo.org> chardet-2.0.1.ebuild:
+  Marked ~hppa (bug #300741).
 
 *chardet-2.0.1 (12 Jan 2010)
 
